--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "phpunit/phpunit": "^9.5",
         "php-webdriver/webdriver": "^1.15",
         "phpstan/phpstan": "^1.10",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "erusev/parsedown": "^1.7"
     },
     "autoload": {
         "psr-4": {
