Fix CI build job dependencies
Squashed commits:
6747e15 fix: Install dev dependencies in CI build job for linting
ebbefb1 fix: Limit test:coverage to unit and integration tests (skip E2E)
9fbaea4 fix: Add MIT license to composer.json to fix CI validation
534dcb4 chore: Prepare release v2025.12.14c - Security and quality fixes
441e2a8 docs: Session state save - all 10 review tasks complete
62e3e24 refactor: Extract helper functions from generateSambaConfig()
55913f3 chore: Code quality improvements from project review
c23784f fix(security): Prevent Samba config injection and TOCTOU symlink attacks
3f9ecad docs: Add project review report and update status
4df44da fix: Add VERSION file and tests for version display
71833e7 fix: Widen Actions column to fit Edit|Clone|Delete on one line
70fb9c4 feat: Add release-to-public.sh for squashed releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,7 +99,7 @@ jobs:
           php-version: '8.1'
       
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress --no-dev
+        run: composer install --prefer-dist --no-progress
       
       - name: Build package
         run: ./build.sh --fast
